# advise_me

./: CMakeLists.txt  Main.qml  androidsecurestorage.cpp  androidsecurestorage.h  base.cpp  base.h  deSerilize.h  derived.h  filename.txt  kdewallet.cpp  kdewallet.h  main.cpp  networkaccessmanageraccessor.h  networkmanageraccessor.cpp  networkmanageraccessor.h  profile.cpp  profile.h  repository.cpp  repository.h  securestorage.cpp  securestorage.h  securestoragefactory.cpp  securestoragefactory.h  storage.cpp  storage.h  webrequest.cpp  webrequest.h
SignIn/: CMakeLists.txt  PopUpDialog.qml  ShapeAndAnimation.qml  SignIn.qml  SigninForm.qml  signinrepository.cpp  signinrepository.h  signinrequest.cpp  signinrequest.h  test.h
SignIn/Logic/: signinrepository.cpp  signinrepository.h
UIComponents/: ColoredTextField.qml  PopUpDialog.qml
android/: build.gradle
android/src/org/qtproject/example/: SecureStorage.java  TestClass.java
android_cpp/: CMakeLists.txt  androidsecurestorage.cpp
